--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -17,7 +17,7 @@
         <h3>Contactame</h3> <br>
         <img src="../../../assets/img/whatsapp.png" style="width: 2rem;"><a href="https://wa.me/525548516533">+52 5548516533</a> <br><br>
         <img src="../../../assets/img/gmail.png" style="width: 2rem;"> pepemendoza1311@gmail.com<br><br>
-        <img src="../../../assets/img/facebook.png" style="width: 2rem;">&nbsp;<a href="https://www.facebook.com/JESUSMB1311">Pepe Mendoza</a> <br><br>
+        <img src="src/assets/img/facebook.png" style="width: 2rem;">&nbsp;<a href="https://www.facebook.com/JESUSMB1311">Pepe Mendoza</a> <br><br>
         <img src="../../../assets/img/github.png" style="width: 2rem;"> JoseDeJesusMendozaBecerril<br><br>
     </div>
 
