--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
 
             <div class="row" style="margin-top: 1rem;">
                 <div class="col">
-                    <img src="../../../assets/img/herramientas/html.png" style="width: 4.5rem;" class="spacing">
+                    <img src="assets/img/herramientas/html.png" style="width: 4.5rem;" class="spacing">
                     <img src="../../../assets/img/herramientas/javascript.png" style="width: 2rem;" class="spacing">
                     <img src="../../../assets/img/herramientas/typescript.png" style="width: 2.3rem;" class="spacing">
                     <img src="../../../assets/img/herramientas/angular.png" style="width: 3rem;" class="spacing">
