--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-1"></div>
     <div class="col-md-4 ">
         <div class="card" style="width: 23rem;">
-            <img src="../../../assets/img/perfil.jpg" class="card-img-top" alt="...">
+            <img [src]="projectsService.icons[12]" class="card-img-top" alt="...">
 
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Jose De Jesus Mendoza Becerril</li>
@@ -15,10 +15,10 @@
     </div>
     <div class="col-md-3">
         <h3>Contactame</h3> <br>
-        <img src="../../../assets/img/whatsapp.png" style="width: 2rem;"><a href="https://wa.me/525548516533">+52 5548516533</a> <br><br>
-        <img src="../../../assets/img/gmail.png" style="width: 2rem;"> pepemendoza1311@gmail.com<br><br>
-        <img src="../../../assets/img/facebook.png" style="width: 2rem;">&nbsp;<a href="https://www.facebook.com/JESUSMB1311">Pepe Mendoza</a> <br><br>
-        <img src="../../../assets/img/github.png" style="width: 2rem;"> JoseDeJesusMendozaBecerril<br><br>
+        <img [src]="projectsService.icons[11]" style="width: 2rem;"><a href="https://wa.me/525548516533">+52 5548516533</a> <br><br>
+        <img [src]="projectsService.icons[9]" style="width: 2rem;"> pepemendoza1311@gmail.com<br><br>
+        <img [src]="projectsService.icons[7]" style="width: 2rem;">&nbsp;<a href="https://www.facebook.com/JESUSMB1311">Pepe Mendoza</a> <br><br>
+        <img [src]="projectsService.icons[8]" style="width: 2rem;"> JoseDeJesusMendozaBecerril<br><br>
     </div>
 
 </div>
